tests/paczka1/small_fuzzy/88247360.err
Error in line 7: RUVwg4n S669 68,48
Error in line 3: RUVwg4n S129 13,9
Error in line 8: A878 A79 21,9
